# Uni-Thesis

./: .gitignore  README.md  app.py  pyproject.toml  requirements.txt
.github/workflows/: main.yml
.run/: Hypercorn.run.xml  Quart.run.xml  Run Application.run.xml  npm autobuild.run.xml  npm dev.run.xml
application/: __init__.py  app_generator.py  assistant.py  config_helper.py  exceptions.py
assistant/: __init__.py  assistant.py
bruno_requests/: bruno.json  collection.bru
bruno_requests/Assistant/: Post Message.bru  Start Chat.bru  folder.bru
bruno_requests/Authentication/: Log In.bru  Register.bru  Verify Credentials.bru  folder.bru
bruno_requests/Car Catalogue/: Car Colour List.bru  Car Configs.bru  Car Interior List.bru  Car List.bru  folder.bru
bruno_requests/Customer Order/: Create Order.bru  Order List.bru  Order.bru  folder.bru
bruno_requests/Employee Order/: Employee Order List.bru  Employee Order.bru  folder.bru
bruno_requests/Manager Statistics/: Employee Orders by Status.bru  Employee Test Drives by Status.bru  Monthly Order Statistics.bru  Monthly Test Drive Statistics.bru  folder.bru
bruno_requests/Sales Rep Statistics/: Order Statistics.bru  Test Drive Statistics.bru  (+1 more)
database/: UserAPI.py  __init__.py  car_api.py  connection_builder.py  employee_api.py  order_api.py  test_drive_api.py  user_api.py
endpoints/: __init__.py  assistant.py  authentication.py  car.py  order.py  statistics.py  test.py  test_drive.py
frontend/: index.html  package-lock.json  package.json  pnpm-lock.yaml
tests/: init_app.py  init_db.py  test_api.py
(+72 files in other folders)
